# manastack_pricer

./: pricer.js  pricer.min.js  pyproject.toml
tests/: test_mtg_pricer.py
