[tool.poetry]
name = "mtg-pricer"
version = "0.1.0"
description = ""
authors = ["Hassan Shamim <hassan.has.you@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"
beautifulsoup4 = "^4.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
